# LegacyWingsXI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  Dockerfile  LICENSE  NEW-LOGIN  README.md  Run.bat  TOPAZLICENSE  docker-compose.yml  fishermans_belt.lua
cmake/: FindBaseencode.cmake  FindCOTP.cmake  FindLuaJIT.cmake  FindMariaDBPP.cmake  FindOpenSSL.cmake  FindRabbitMQ.cmake  FindZLIB.cmake  Platform.cmake  StandardProjectSettings.cmake  Tracy.cmake
conf-docker/: README.md  login.conf  map.conf  search_server.conf  server_message.conf  version.conf
documentation/: AI_Events.txt  EntityFlags.txt  Nyzul_Isle_Mobs.txt  Nyzul_Isle_Npcs.txt  Waughroon_Shrine_armory_crates.txt  bcnm_loot_converted.lua  known_monsters_animations.txt  monster_tp_check_list.txt
initdb-wings/: 0001-createdbs.sql  0002-sql-data.sh  0003-ip.sql
migrations/: broken_linkshells.py  char_unlock_table_columns.py  crystal_storage.py  fixabilities.py  migrate.py  spell_blobs_to_spell_table.py  spell_family_column.py
queries/: mob_pools.sql
sql/: augments.sql  bcnm_battlefield.sql  guild_item_points.sql  item_latents.sql  (+13 more)
sql-login/: accounts.sql  blocked_domains.sql  blocked_ranges.sql  blocked_ranges_v6.sql  chars.sql  contents.sql  disallowed_names.sql  login_log.sql  web_tokens.sql  worlds.sql
sql-wings/: abilities.sql  abilities_charges.sql  accounts.sql  accounts_sessions.sql  audit_chat.sql  audit_gm.sql  audit_list.sql  augments.sql  automaton_spells.sql  bazaar_log.sql  bcnm_battlefield.sql  bcnm_info.sql  bcnm_treasure_chests.sql  blue_spell_list.sql  blue_spell_mods.sql  blue_traits.sql  char_blacklist.sql  char_effects.sql  char_equip.sql  char_exp.sql  char_fellow.sql  char_gillog.sql  char_gmmessage.sql  char_inventory.sql  char_job_sets.sql  char_jobs.sql  char_look.sql  char_merit.sql  char_pet.sql  char_profile.sql  char_recast.sql  char_skills.sql  char_spells.sql  char_stats.sql  char_storage.sql  char_style.sql  char_unlocks.sql  char_vars.sql  chars.sql  cheat_incidents.sql  (+65 more)
src/common/detour/: CMakeLists.txt  DetourCommon.h
src/map/ai/controllers/: CMakeLists.txt  automaton_controller.cpp  automaton_controller.h  controller.cpp  fellow_controller.cpp  fellow_controller.h  mob_controller.cpp  mob_controller.h  pet_controller.cpp  player_charm_controller.cpp  player_controller.cpp  player_controller.h  spirit_controller.cpp  spirit_controller.h  targeted_avatar_controller.cpp  targeted_avatar_controller.h  trust_controller.cpp
src/map/entities/: CMakeLists.txt  automatonentity.cpp  baseentity.cpp  baseentity.h  battleentity.cpp  battleentity.h  charentity.cpp  charentity.h  fellowentity.cpp  fellowentity.h  mobentity.cpp  mobentity.h  npcentity.cpp  petentity.cpp  trustentity.cpp  trustentity.h
src/new-common/: BlowfishMod.c  BlowfishMod.h  CMakeLists.txt  CommonMessages.h  Database.cpp  Database.h  Debugging.c  Debugging.h  FFXIPacket.cpp  FFXIPacket.h  GlobalConfig.cpp  GlobalConfig.h  MQConnection.cpp  MQConnection.h  MQHandler.cpp  MQHandler.h  SSLConnection.cpp  SSLConnection.h  TCPConnection.cpp  TCPConnection.h  Thread.cpp  Thread.h  Utilities.cpp  Utilities.h  WorldDBConnection.cpp  WorldDBConnection.h
src/new-login/: AuthHandler.cpp  AuthHandler.h  Authentication.cpp  Authentication.h  CMakeLists.txt  CharMessageHnd.cpp  CharMessageHnd.h  DataHandler.cpp  DataHandler.h  FFXILoginPacket.cpp  FFXILoginPacket.h  LoginGlobalConfig.cpp  LoginGlobalConfig.h  LoginMain.cpp  LoginServer.cpp  LoginServer.h  LoginSession.cpp  LoginSession.h  ProtocolFactory.cpp  ProtocolFactory.h  ProtocolHandler.cpp  ProtocolHandler.h  SessionTracker.cpp  SessionTracker.h  ViewHandler.cpp  ViewHandler.h  WorldManager.cpp  WorldManager.h
(+6694 files in other folders)
